--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -56,17 +56,15 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Подробное-содержимое-сборки.html">Подробное содержимое сборки</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
@@ -79,17 +77,15 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Подробное-содержимое-сборки.html">Подробное содержимое сборки</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакты.html">Контакты</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
@@ -145,12 +141,12 @@
         <img class="u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows10x64-2022-06-22-21-41-26.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows10x64-2022-06-22-21-41-54.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width u-image u-image-default u-image-11" src="images/Windows10x64-2022-06-22-21-41-11.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-default u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся рег файлы,<br>чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
+        <p class="u-align-left u-text u-text-default u-text-7"> Добавлена папка "от Марка Аддерли", в которой находятся рег файлы,<br>чтобы редактировать проводник и вернуть старый просмотрщик фото. <br>А так же, чтобы отключать и включать обновления. <br>
           <br>Удалены все UWP приложения, кроме калькулятора, часов, и фотографий <br>
           <br>Удалён OneDrive из автозагрузки <br>
-          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, x86 и x64 <br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, x86 и x64<br>(Докачать можно на сайте, я не добавлял чтобы меньше весил)&nbsp;<br>
           <br>Интегрирован Framework 4.7.2 <br>
-          <br>Образ весит 4 GB, после установки Windows занимает 9 GB <br>
+          <br>Образ весит 4 GB, после установки Windows занимает 8.68 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
           <br>В этой сборке нет инсталяторов программ, и обоев.<br>
           <br>Проверена на слабом ПК, отлично оптимизирована.
