--- a/Содержимое-сборок.html
+++ b/Содержимое-сборок.html
@@ -56,17 +56,15 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="Подробное-содержимое-сборки.html">Подробное содержимое сборки</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Контакты.html" style="padding: 10px 20px;">Контакты</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Содержимое-сборок.html" style="padding: 10px 20px;">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
@@ -79,17 +77,15 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-5"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-8-1-сборки.html">Сборки Windows 8.1</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-10-сборки.html">Сборки Windows 10</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Windows-11-сборки.html">Сборки Windows 11</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Подробное-содержимое-сборки.html">Подробное содержимое сборки</a>
-</li></ul>
-</div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Контакты.html">Контакты</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="FineWork.html">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
@@ -106,12 +102,29 @@
     <section class="u-clearfix u-grey-80 u-section-1" id="sec-3b98">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-round u-radius-33 u-image-1" src="images/2022-06-22180219.png" alt="" data-image-width="312" data-image-height="257">
-        <p class="u-align-center u-text u-text-default u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
+        <p class="u-align-center u-text u-text-default u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (Vista, 7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
         </p>
         <img class="u-image u-image-round u-radius-31 u-image-2" src="images/2022-06-22180311.png" alt="" data-image-width="273" data-image-height="218">
         <p class="u-align-center u-text u-text-default u-text-2">Все программы находятся в папках по категории,<br>в каждой папке по максимум 5 инсталяторов.<br>В папках только самое нужное после установки.
         </p>
-        <a href="Подробное-содержимое-сборки.html" data-page-id="2679808109" class="u-border-none u-btn u-btn-round u-button-style u-palette-1-base u-radius-50 u-btn-1">Подробное описание содержимого сборок</a>
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-3">Подробное содержание</p>
+        <img class="u-image u-image-round u-radius-50 u-image-3" src="images/2022-06-23003815.png" alt="" data-image-width="314" data-image-height="250">
+        <p class="u-text u-text-default u-text-4">Как и говорилось, это папки из единственной папки "от Марка Аддерли"</p>
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-5">И что в них находится:</p>
+        <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-06-23003844.png" alt="" data-image-width="272" data-image-height="125">
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-6">Это чтобы убрать стрелки которые нарисованы на ярлыках рабочего стола.</p>
+        <p class="u-text u-text-default u-text-7">1 набор курсоров в стиле Windows 11, инсталяторы моих программ.</p>
+        <img class="u-expanded-width-xs u-image u-image-default u-image-5" src="images/2022-06-23003857.png" alt="" data-image-width="263" data-image-height="535">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/2022-06-23003930.png" alt="" data-image-width="259" data-image-height="533">
+        <p class="u-text u-text-default u-text-8">Ну и инсталяторы программ:</p>
+        <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-06-23003944.png" alt="" data-image-width="259" data-image-height="223">
+        <img class="u-image u-image-default u-image-8" src="images/2022-06-23004010.png" alt="" data-image-width="302" data-image-height="80">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/2022-06-23004034.png" alt="" data-image-width="567" data-image-height="60">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/2022-06-23004049.png" alt="" data-image-width="535" data-image-height="56">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-11" src="images/2022-06-23004106.png" alt="" data-image-width="577" data-image-height="51">
+        <img class="u-image u-image-default u-image-12" src="images/2022-06-23004126.png" alt="" data-image-width="203" data-image-height="105">
+        <img class="u-image u-image-default u-image-13" src="images/2022-06-23004144.png" alt="" data-image-width="150" data-image-height="122">
+        <img class="u-image u-image-default u-image-14" src="images/2022-06-23004206.png" alt="" data-image-width="234" data-image-height="164">
       </div>
     </section>
     
